Problem with "jumping scroll" on mobiles fixed

--- a/sass/large.sass
+++ b/sass/large.sass
@@ -9,7 +9,10 @@
         font-size: 30px  
         z-index: 1
         animation: bounce 1.6s infinite
-
+#jobs  
+    .jumbotron  
+        h2 
+            margin-bottom: 0
 #prices 
     .price-wrap 
         width: 80%
