--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,6 +3,7 @@ $blue-color: #0e70b7
 *, *::after, *::before
     box-sizing: border-box
     margin: 0
+    padding: 0
     
 html 
     scroll-behavior: smooth    
@@ -10,6 +11,10 @@ body
     position: relative
     font-family: 'Montserrat', sans-serif   
     background-color: black
+     
+h2 
+    text-transform: uppercase
+    text-align: center
 .map 
     display: block
     width: 100%
@@ -25,9 +30,7 @@ body
     width: 80%
     margin: 0 auto
 
-    h2 
-        text-transform: uppercase
-        text-align: center
+
 .underline 
     margin: 0 auto 40px
     width: 60px
@@ -70,7 +73,7 @@ nav
    
 header
     height: 100vh
-    width: 100%
+    // width: 100%
     background-image: url("../img/l.jpg")
     background-position: center
     background-size: cover
@@ -153,12 +156,11 @@ header::after
     .about-hero-item 
         margin: 10px 0
 #jobs 
-    h2 
-        text-transform: uppercase
-        text-align: center
+    overflow: hidden
+    
     .carousel-item 
         position: relative
-        height: 500px
+        height: 600px
         img 
             position: absolute
             top: 50%
@@ -168,6 +170,7 @@ header::after
         position: absolute 
         left: 0
         right: 0
+        padding: 40px 0
         background-color: rgba(0, 0, 0, .8) 
         h5 
             font-size: 14px 
@@ -176,11 +179,9 @@ header::after
     .carousel-indicators 
         padding-bottom: 10px
 #prices 
+    overflow: hidden
     .jumbotron 
-        background-color: #f9f9f9
-    h2 
-        text-transform: uppercase
-        text-align: center    
+        background-color: #f9f9f9 
     .price-wrap
         max-width: 1920px 
         width: 95%
@@ -211,7 +212,7 @@ header::after
     .price-text 
         margin-top: 30px 
 #comments 
-    
+    overflow: hidden
     .jumbotron 
         position: relative
         background-image: url("../img/comment-shadow.jpg")
@@ -233,7 +234,7 @@ header::after
         img 
             height: 300px 
             object-fit: cover
-            object-position: center 
+            
         i 
             padding: 10px 20px
         .row 
@@ -250,10 +251,9 @@ header::after
     .card-text 
         font-size: 14px
 #achievements 
+    overflow: hidden
     .jumbotron 
-        h2 
-            text-align: center
-            text-transform: uppercase
+        
         .achievement 
             text-align: center
         .achievements-list 
@@ -272,6 +272,7 @@ header::after
             font-size: 13px
             text-transform: uppercase
 #contact 
+    overflow: hidden
     .jumbotron 
         position: relative 
         background-image: url("../img/contact.jpg")
@@ -280,9 +281,7 @@ header::after
         background-attachment: fixed
         z-index: 0
         color: #fff
-        h2 
-            text-transform: uppercase
-            text-align: center
+        
     .contact-shadow 
         position: absolute
         top: 0
@@ -328,6 +327,7 @@ footer
                 text-transform: uppercase
             p 
                 font-size: 18px 
+    
     #comments 
         .card-text 
             font-size: 15px
@@ -339,3 +339,8 @@ footer
     #comments 
         .card-body 
             height: 120px
+@media (max-width: 767px) 
+    #jobs  
+        .jumbotron  
+            h2 
+                margin-bottom: -150px
